# FRC-2026

./: .gitignore  .pre-commit-config.yaml  Pipfile  mypy.ini  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: python-checks.yml
deploy/pathplanner/paths/: Backward Chain.path  Backward.path  get out of the way from mid.path  get out of way from left.path  l test.path  right to balls.path  under right trench from start middle.path  under right trench to hub.path
helper-scripts/: common-commands  common-commands.md  common-commands.txt
src/: LEDSignals.py  cameras.py  conftest.py  controls.py  desiredState.py  drive.py  importantCode.py  importantCode.txt  inputs.py  motor.py  physics.py  pyproject.toml  robot.py  robotHAL.py  robotaaa.py  subsystem.py  subsystemManager.py  subsystems.py  swerveDrive.py  turret.py  utils.py
src/.wpilib/: wpilib_preferences.json
src/deploy/pathplanner/: settings.json
src/mb/: LEDSignals.py  controls.py  desiredState.py  drive.py  inputs.py  motor.py  motors.py  networkTablesMixin.py  subsystem.py  swerveDrive.py  utils.py
src/subsystems/: DexShooter.py  LEDSignals.py  autoRoutines.py  autoStages.py  autoSubsystem.py  cameras.py  climber.py  climbing.py  desiredState.py  flyTraj.py  inputs.py  intake.py  interpolate.py  limelights.py  limelightss.py  messageSubsystem.py  motor.py  networkTablesMixin.py  robotState.py  servo.py  shooter.py  subsystem.py  subsystemExample.py  subsystemPractice.py  swerveDrive.py  tester.py  turret.py  turretSystem.py  utils.py
tests/: pyfrc_test.py
(+39 files in other folders)
