[project]
name = "FRC-2026"
version = "1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "robotpy==2026.2.1",
    "robotpy-navx",
    "robotpy-pathplannerlib",
    "robotpy-rev",
    "phoenix6",
    "photonlibpy",
    "ty",
    "pre-commit",
    "certifi>=2026.1.4",
    "setuptools<82.0.0",
]


[tool.uv]
python-preference = "managed"


[tool.ty.environment]
python-version = "3.13"
python = ".venv/bin/python3"
